syntax = "proto3";
package second;
option go_package="protoc-gen-go-mrpc/second;second";
message kiss_req{
	int64 time=1;
	int64 type=2;
}
message kiss_resp{
	int64 time=1;
	int64 status=2;
}
message bye_req{
	int64 status=1;
}
message bye_resp{
	int64 status=1;
}
