syntax = "proto3";
package first;
option go_package="protoc-gen-go-web/first;first";
import "protoc-gen-go-web/second/second.proto";
service test {
	rpc hello(hello_req)returns(hello_resp);//httpmethod:get,timeout:200
	rpc kiss(second.kiss_req)returns(second.kiss_resp);//httpmethod:post,timeout:2s
	rpc bye(second.bye_req)returns(second.bye_resp);//httpmethod:get,timeout:200ms
}
message hello_req{
	string name=1;
	int64 sex=2;
	string addr=3;
	string tel=4;
}
message hello_resp{
	string name=1;
	int64 sex=2;
	string addr=3;
	string tel=4;
}
